# atsamd_wio

./: .gitignore
boards/atsame54_xpro/: CHANGELOG.md
boards/feather_m0/: CHANGELOG.md  Cargo.toml
boards/feather_m4/: CHANGELOG.md
boards/itsybitsy_m4/: CHANGELOG.md
boards/metro_m0/: CHANGELOG.md
boards/metro_m4/: CHANGELOG.md
boards/metro_m4/examples/: async_uart.rs
boards/pygamer/: CHANGELOG.md
boards/pyportal/: CHANGELOG.md
boards/samd11_bare/: CHANGELOG.md
boards/wio_terminal/: CHANGELOG.md  Cargo.toml  README.md
boards/wio_terminal/examples/: async_eic.rs  async_opentherm.rs  eic.rs  sdcard.rs  snake.rs
boards/wio_terminal/src/: _buttons.rs  _display.rs  _sensors.rs  _serial.rs  _sound.rs  _storage.rs  _wifi.rs  buttons.rs  display.rs  lib.rs  pins.rs  sensors.rs  sets.rs  storage.rs
hal/: CHANGELOG.md  Cargo.toml
hal/src/async_hal/: interrupts.rs
hal/src/peripherals/: mod.rs
hal/src/peripherals/pwm/: d5x.rs
hal/src/peripherals/pwm_waveform/: d5x.rs
hal/src/peripherals/timer/: async_api.rs
hal/src/peripherals/timer_capture_waveform/: d5x.rs
hal/src/sercom/: spi.rs
hal/src/sercom/spi/impl_ehal/: mod.rs
