[package]
name = "wio_terminal"
version = "0.7.1"
authors = [
  "Jesse Braham <jesse@beta7.io>",
  "Tom <twitchyliquid64@ciphersink.net>",
]
edition = "2021"
description = "Board support crate for the Seeed Studio Wio Terminal"
documentation = "https://docs.rs/wio-terminal/"
readme = "README.md"
repository = "https://github.com/atsamd-rs/atsamd"
license = "MIT OR Apache-2.0"
keywords = ["arm", "cortex-m", "embedded-hal", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

exclude = ["assets", "src/_*"]

# for cargo flash
[package.metadata]
chip = "ATSAMD51P19A"

[dependencies]
bitfield = "0.13"
modular-bitfield = "0.11"
fugit = "0.3.7"
cortex-m-rt = { version = "0.7", optional = true }
display-interface-spi = "0.4"
heapless = "0.8"
ili9341 = "0.5.0"
lis3dh = "0.3.0"
embedded-sdmmc = "0.3.0"
usb-device = { version = "0.2", optional = true }
bbqueue = { version = "0.5", optional = true }
generic-array = { version = "0.14", optional = true }
seeed-erpc = { version = "0.1.1", optional = true }
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6.2", features = [
  "arch-cortex-m",
  "executor-thread",
  "task-arena-size-8192",
] }
rtic-monotonics = { version = "2.0.1", features = ["cortex-m-systick"] }

# Opentherm project specific dependnecies:
#opentherm_boiler_controller_lib = { version = "0.1.0", git = "ssh://cooler1989@bitbucket.org/learn-rust/boiler_controller_ot_lib.git", features = [] }


[dependencies.cortex-m]
version = "0.7.3"
features = ["critical-section-single-core"]

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.20.2"
default-features = false

[dev-dependencies]
usbd-serial = "0.1"
embedded-graphics = "0.7.1"
panic-probe = "0.3"
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
oorandom = "11.1.3"
nom = { version = "^6.0", default-features = false }

[features]
# default = ["atsamd-hal/samd51p", "rt", "usb", "wifi", "dma", "async"]
default = ["atsamd-hal/samd51p", "rt", "dma", "async"]
rt = ["atsamd-hal/samd51p-rt", "cortex-m-rt"]
#  unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device"]
# enable feature for RTL8720 firmware older than 2.1.2
wifi-fw-before-212 = []
wifi = ["bbqueue", "generic-array", "seeed-erpc"]
dma = ["atsamd-hal/dma"]
# Enable async support from atsamd-hal
async = ["atsamd-hal/async"]
use_semihosting = []

[[example]]
name = "blinky"

[[example]]
name = "buttons"

[[example]]
name = "clock"
required-features = ["usb"]

[[example]]
name = "microphone"

[[example]]
name = "orientation"

[[example]]
name = "usb_serial_display"
required-features = ["usb"]

[[example]]
name = "sdcard"

[[example]]
name = "eic"

[[example]]
name = "async_eic"
required-features = ["async"]

[[example]]
name = "async_opentherm"
required-features = ["async"]

[[example]]
name = "qspi"

[[example]]
name = "wifi_scan"
required-features = ["wifi"]

[[example]]
name = "wifi_connect"
required-features = ["wifi"]

[[example]]
name = "snake"

[[example]]
name = "async_sdcard"
required-features = ["dma", "async"]
